--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -2,10 +2,8 @@
 * {
     font-family: "Roboto", "sans-serif";
     box-sizing: border-box;
-}
-
-body{
-    background-color: #f1f1f1;
+    margin: 0;
+    padding: 0;
 }
 
 .content {
@@ -13,6 +11,28 @@ body{
     background-color: #FFF;
     height: 100vh;
     width: 100vw;
+}
+
+.pagination{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    padding: 1rem 0;
+}
+
+@media screen and (width > 992px) {
+    body, html{
+        background-color: #f1f1f1;
+        overflow-x: hidden;
+    }
+
+    .content {
+        max-width: 992px;
+        height: auto;
+        margin: 1rem auto;
+        border-radius: 1rem;
+    }
 }
 
 
