--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -1,3 +1,76 @@
+.normal {
+    background-color: #a6a877;
+}
+
+.grass {
+    background-color: #50c86e;
+}
+
+.fire {
+    background-color: #ee7f30;
+}
+
+.water {
+    background-color: #678fee;
+}
+
+.electric {
+    background-color: #f7cf2e;
+}
+
+.ice {
+    background-color: #98d5d7;
+}
+
+.ground {
+    background-color: #dfbf69;
+}
+
+.flying {
+    background-color: #a98ff0;
+}
+
+.poison {
+    background-color: #a040a0;
+}
+
+.fighting {
+    background-color: #bf3029;
+}
+
+.psychic {
+    background-color: #f65687;
+}
+
+.dark {
+    background-color: #725847;
+}
+
+.rock {
+    background-color: #b8a137;
+}
+
+.bug {
+    background-color: #a8b720;
+}
+
+.ghost {
+    background-color: #6e5896;
+}
+
+.steel {
+    background-color: #b9b7cf;
+}
+
+.dragon {
+    background-color: #6f38f6;
+}
+
+.fairy {
+    background-color: #f9aec7;
+}
+
+
 .pokemons {
     list-style: none;
     display: grid;
@@ -13,6 +86,7 @@
     padding: 1rem;
     color: #fff;
     border-radius: 1rem;
+
 }
 
 .pokemon #pokemonNumber {
@@ -23,6 +97,7 @@
 
 .pokemon .name {
     margin-bottom: 0;
+    text-transform: capitalize;
 }
 
 .pokemon .detail {
@@ -39,25 +114,23 @@
 }
 
 .pokemon .types .type {
-    background-color: #61e1ca;
+    filter: brightness(1.1);
     margin: 0.25rem 0;
     margin-right: 1rem;
     border-radius: 1rem;
     padding: 0.25rem 0.5rem;
     font-size: 0.625rem;
+    letter-spacing: 1px;
 }
 
 .pokemon img {
     max-width: 100%;
     height: 70px;
     transform: scaleX(-1);
+    transition: all 0.3s;
 }
 
-.grass{
-    background-color: #49d0b0;
-}
-
-@media screen and (width < 375px){
+@media screen and (width < 380px){
     .pokemons {
         grid-template-columns: 1fr;
     }
